; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/common/extr_imagelib.c_LoadTGA.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/common/extr_imagelib.c_LoadTGA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"Couldn't read %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LoadTGA(i8* %0, i32** %1, i32* %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i32** %9 to i8**
  %13 = call i32 @LoadFile(i8* %11, i8** %12)
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp eq i32 %14, -1
  br i1 %15, label %16, label %19

16:                                               ; preds = %4
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @Error(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %17)
  br label %19

19:                                               ; preds = %16, %4
  %20 = load i32*, i32** %9, align 8
  %21 = load i32**, i32*** %6, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @LoadTGABuffer(i32* %20, i32** %21, i32* %22, i32* %23)
  ret void
}

declare dso_local i32 @LoadFile(i8*, i8**) #1

declare dso_local i32 @Error(i8*, i8*) #1

declare dso_local i32 @LoadTGABuffer(i32*, i32**, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
